Render Border Viewport broken. #43672

Closed
opened 2015-02-15 17:51:43 +01:00 by Eugenio Pignataro · 15 comments

Ubuntu 14.10 64
Current build of Blender.

The problem apper since 3 or 4 weeks... aprox.
If the render border exceeds the area of the screen, render visibility turn off...
The explain is in the attached picture!

http://www.pasteall.org/pic/83925

Greetings folks!!!!!

Ubuntu 14.10 64 Current build of Blender. The problem apper since 3 or 4 weeks... aprox. If the render border exceeds the area of the screen, render visibility turn off... The explain is in the attached picture! http://www.pasteall.org/pic/83925 Greetings folks!!!!!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @EugenioPignataro

Added subscriber: @EugenioPignataro
Sergey Sharybin was assigned by Campbell Barton 2015-02-16 03:32:16 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I can redo this bug but when the region outside the bottom-left of the view., Cycles rendering locks up on me.

I can redo this bug but when the region outside the bottom-left of the view., Cycles rendering locks up on me.
Author
Member

Demo video!!!!

Demo video!!!!
Author
Member
https://dl.dropboxusercontent.com/u/14261604/REGION.ogv

It doesn't seem you're using official builds, so does it happen with latest builds from builder.blender.org?

You're also constantly zooming in and out in your video. That's not informative at all, scene gets reset on every mouse zoom change and re-render triggers, which could leave default checker behind. Stop zooming after the border exceeded the view area! :)

Also, try loading factory settings and uploading such a simple .blend file could help as well. Also, please upload your system-info.txt.

It doesn't seem you're using official builds, so does it happen with latest builds from builder.blender.org? You're also constantly zooming in and out in your video. That's not informative at all, scene gets reset on every mouse zoom change and re-render triggers, which could leave default checker behind. Stop zooming after the border exceeded the view area! :) Also, try loading factory settings and uploading such a simple .blend file could help as well. Also, please upload your system-info.txt.
Author
Member

Hi Sergey...
I'm testing from builder, works fine... is very strange.
My build are compiled with the script from source....

Close the report.... strange strange strange!

Sergey, I send you an email!!!

Hi Sergey... I'm testing from builder, works fine... is very strange. My build are compiled with the script from source.... Close the report.... strange strange strange! Sergey, I send you an email!!!
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Closing as Archived then. Thanks for the report anyway :)

Closing as Archived then. Thanks for the report anyway :)

This issue was referenced by da0176614b

This issue was referenced by da0176614b37315df7aaf6243c80d5c66a7ca4dc

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

Closed by commit da0176614b.

Closed by commit da0176614b.

This issue was referenced by blender/cycles@349bc2a685

This issue was referenced by blender/cycles@349bc2a6852e718e6e9b2b9f025f4121aad87016
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43672
No description provided.