Fix T43672: Cycles preview stalls when out of view